--- a/byimage recommender/templates/index.html
+++ b/byimage recommender/templates/index.html
@@ -47,17 +47,15 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-          {% for item in options %}
-          <li>item['name'] </li>
-          {% endfor %}
+          {% for item in allpaths %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/resources/img/test_images/bluza1.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="/static/resources/img/test_images/{{item}}"  alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">{{ item }}</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5 style="text-align: center">{{ range(1, 51) | random }}$</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -65,6 +63,8 @@
               </div>
             </div>
           </div>
+          {% endfor %}
+
         </div>
         <!-- /.row -->
 
