--- a/byimage recommender/templates/footer.html
+++ b/byimage recommender/templates/footer.html
@@ -1,7 +1,7 @@
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5 bg-light">
     <div class="container">
-      <p class="m-0 text-center text-white"> ZZZZZZZZZZZ  </p>
+      <p class="m-0 text-center text-white">SvA Inc.</p>
     </div>
     <!-- /.container -->
   </footer>
