--- a/byimage recommender/templates/index.html
+++ b/byimage recommender/templates/index.html
@@ -54,7 +54,7 @@
               <img class="card-img-top" src="/static/resources/img/test_images/{{item}}"  alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">{{ item }}</a>
+                  <a href="/product/{{item}}">{{ item }}</a>
                 </h4>
                 <h5>{{ range(1, 51) | random }}$</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
