--- a/byimage recommender/templates/footer.html
+++ b/byimage recommender/templates/footer.html
@@ -1,7 +1,11 @@
-  <!-- Footer -->
-  <footer class="py-5 bg-light">
-    <div class="container">
-      <p class="m-0 text-center text-white">SvA Inc.</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+<!-- Footer -->
+<footer class="page-footer font-small bg-light">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="/"> SvA Inc.</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
