--- a/byimage recommender/templates/index.html
+++ b/byimage recommender/templates/index.html
@@ -11,10 +11,10 @@
 
         <h1 class="my-4">SvA Inc.</h1>
         <div class="list-group">
-          <a href="#" class="list-group-item">Home</a>
-          <a href="#" class="list-group-item">About</a>
-          <a href="#" class="list-group-item">Services</a>
-          <a href="#" class="list-group-item">Contact</a>
+          <a href="#" class="list-group-item list-group-item-action active">Home</a>
+          <a href="#" class="list-group-item list-group-item-action">About</a>
+          <a href="#" class="list-group-item list-group-item-action">Services</a>
+          <a href="#" class="list-group-item list-group-item-action ">Contact</a>
         </div>
 
       </div>
