--- a/byimage recommender/static/resources/css/shop-homepage.css
+++ b/byimage recommender/static/resources/css/shop-homepage.css
@@ -1,3 +1,30 @@
+
+
 body {
   padding-top: 56px;
+}
+/* HOME PATE */
+
+
+/* PRODUCT */
+.product-info{
+  padding:10px;
+  margin: 10px;
+}
+.card-title{
+  text-align: center;
+}
+
+svg{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -100;
+  height: 100%;
+  width:100%;
+}
+
+body > div > div > div.col-lg-3 > h1{
+  color: white;
+  font-size: 40px;
 }
