--- a/byimage recommender/templates/nav.html
+++ b/byimage recommender/templates/nav.html
@@ -1,27 +1,9 @@
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">SvA Inc.</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+  <!-- As a link -->
+<nav class="navbar navbar-light bg-light fixed-top">
+  <a class="navbar-brand" href="#">SvA Inc.</a>
+  <nav class="nav nav-pills nav-justified">
+    <a class="nav-item nav-link active" href="/">Home</a>
+    <a class="nav-item nav-link" href="https://github.com/BartoszWlazlo/Recommendation-System">GitHub.com</a>
   </nav>
+</nav>
