--- a/byimage recommender/templates/product.html
+++ b/byimage recommender/templates/product.html
@@ -3,9 +3,8 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="col-6">
+    <div class="row product-info">
+            <div class="col-md-6">
                     <div class="card h-50">
                       <img class="card-img-top" src="/static/resources/img/test_images/{{productname_extension}}"  alt="">
                       <div class="card-body">
@@ -15,8 +14,8 @@
                       </div>
                     </div>
                 </div>
-        <div class="col-6">
-            <table class="table table-bordered">
+        <div class="col-md-6">
+            <table class="table table-bordered bg-light">
                 <tbody>
                     <tr>
                       <th>Cena</th>
@@ -33,18 +32,15 @@
                 </tbody>
             </table>
         </div>
-        </div>
     </div>
 </div>
 <div class="container">
     <h1>Polecane przedmioty:</h1>
-</div>
-
-<div class="col-lg-9">
-    <div class="row" style="margin-left: 400px">
+<div class="col-lg-12">
+    <div class="row">
             {% for item in recommended_products %}
                 <a href="/product/{{item[1]}}">
-                    <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="col-lg-3 col-md-3 mb-3">
                     <div class="card h-100">
                       <img class="card-img-top" src="/static/resources/img/test_images/{{item[1]}}"  alt="">
                       <div class="card-body">
@@ -64,6 +60,7 @@
                 </a>
             {% endfor %}
         </div>
+</div>
 </div>
 
 
