--- a/byimage recommender/templates/nav.html
+++ b/byimage recommender/templates/nav.html
@@ -1,7 +1,7 @@
   <!-- Navigation -->
   <!-- As a link -->
 <nav class="navbar navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">SvA Inc.</a>
+  <a class="navbar-brand text-primary" href="/"><h3>SvA Inc.</h3></a>
   <nav class="nav nav-pills nav-justified">
     <a class="nav-item nav-link active" href="/">Home</a>
     <a class="nav-item nav-link" href="https://github.com/BartoszWlazlo/Recommendation-System">GitHub.com</a>
