--- a/byimage recommender/static/resources/css/shop-homepage.css
+++ b/byimage recommender/static/resources/css/shop-homepage.css
@@ -28,3 +28,20 @@ body > div > div > div.col-lg-3 > h1{
   color: white;
   font-size: 40px;
 }
+
+.navbar-brand{
+  font-weight: 700;
+}
+
+body::-webkit-scrollbar {
+    width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #428bca;
+  outline: 1px solid slategrey;
+}
